--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Car Sales</title>
 </head>
 <body>
-    
+    <form>
+        <fieldset>
+            <input type="text" placeholder="searchInput" name="search" id="searchInput"> 
+        </fieldset>
+    </form>
     <h1 class="report"></h1>
+    
 </body>
  <script type="module" src="carSales.js"></script>
 </html>
